Remove unused imports and fix findbugs in code generated from swankgen